--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Godot Project Exports/Windows/game.exe"
+export_path="../../Godot Project Exports/Windows/game.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -50,7 +50,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Godot Project Exports/MacOSX/game.zip"
+export_path="../../Godot Project Exports/MacOSX/game.zip"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
